Filter Overlay overhaul

--- a/assets/langs/de.json
+++ b/assets/langs/de.json
@@ -32,8 +32,9 @@
   "distance": "Entfernung",
   "available": "Verfügbar",
   "occupied": "Besetzt",
-  "parking_sensor": "Parksensor verbaut",
-  "filter_parking_sensor": "Nur mit Parksensor",
+  "parking_sensor": "Parksensor",
+  "parking_sensor_build": "Parksensor verbaut",
+  "filter_parking_sensor": "Ausschließlich mit Parksensor",
   "Kontakt": "Kontakt",
   "email": "E-Mail",
   "phone": "Tel.",
