--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -31,7 +31,8 @@
   "distance": "Distance",
   "available": "Available",
   "occupied": "Occupied",
-  "parking_sensor": "Sensor installed",
+  "parking_sensor": "Parking Sensor",
+  "parking_sensor_build": "Sensor installed",
   "filter_parking_sensor": "Only with parking sensor",
   "Kontakt": "Contact",
   "email": "E-mail",
