--- a/assets/langs/es.json
+++ b/assets/langs/es.json
@@ -31,8 +31,9 @@
   "distance": "Distancia",
   "available": "Disponible",
   "occupied": "Ocupado",
-  "parking_sensor": "Sensor instalado",
-  "filter_parking_sensor": "Con sensor",
+  "parking_sensor": "sensor de aparcamiento",
+  "parking_sensor_build": "Sensor instalado",
+  "filter_parking_sensor": "Solo con sensor de aparcamiento",
   "Kontakt": "Contacto",
   "email": "Correo electrónico",
   "phone": "Teléfono",
