--- a/assets/langs/fr.json
+++ b/assets/langs/fr.json
@@ -31,8 +31,9 @@
   "distance": "Distance",
   "available": "Disponible",
   "occupied": "Occupée",
-  "parking_sensor": "Capteur installé",
-  "filter_parking_sensor": "Avec capteur",
+  "parking_sensor": "Capteur de stationnement",
+  "parking_sensor_build": "Capteur installé",
+  "filter_parking_sensor": "Uniquement avec capteur de stationnement",
   "Kontakt": "Contact",
   "email": "E-mail",
   "phone": "Téléphone",
